Stylized the categoryWeightings tab, fixed alignment in addCourse modal, and fixed coursework/final weightings in assessment tab

--- a/Gradebook/client/includes/assessmentsTab/assessmentsTab.css
+++ b/Gradebook/client/includes/assessmentsTab/assessmentsTab.css
@@ -47,3 +47,10 @@
 .icon-green{
     color: #4caf50
 }
+
+#assessments-courseWorkWeight, #assessments-finalWeight{
+    width: 10%;
+    margin-bottom: 0;
+    font-size: 1.64rem;
+    text-align: center;
+}
